# pulse

./: .gitignore  AGENTS.md  Cargo.toml  README.md  commands.md  m.md  spec.md
.specs/: specs.md
.specs/adr/: 0001-rust-workspace-and-cli-first.md  0002-explicit-state-directory-and-sqlite.md  0003-yaml-preferred-csv-supported.md  0004-stage-oriented-resumable-pipeline.md  0005-git-cli-for-fetch-tree-and-history.md  0006-partial-degradation-over-whole-repo-failure.md  0007-report-reads-only-persisted-state.md
.specs/issues/: 2026-04-10-ai-adoption-dashboard-requirements.md
ADR/: 0001-fetch-backend.md  0002-git-read-history-backend.md  0003-static-analysis-language-detection.md  0004-persistence-checkpoints.md  0005-fetch-v1-git-cli.md  0006-persistence-v1-rusqlite.md  README.md
crates/pulse-analyze/: Cargo.toml
crates/pulse-analyze/src/: lib.rs
crates/pulse-cli/: Cargo.toml
crates/pulse-cli/src/: main.rs
crates/pulse-cli/tests/: cli.rs
crates/pulse-config/: Cargo.toml
crates/pulse-config/src/: lib.rs
crates/pulse-core/: Cargo.toml
crates/pulse-core/src/: lib.rs
crates/pulse-export/: Cargo.toml
crates/pulse-export/src/: lib.rs
crates/pulse-fetch/: Cargo.toml
crates/pulse-fetch/src/: lib.rs
crates/pulse-git/: Cargo.toml
crates/pulse-git/src/: lib.rs
crates/pulse-input/: Cargo.toml
crates/pulse-input/src/: lib.rs
crates/pulse-store/: Cargo.toml
crates/pulse-store/src/: lib.rs
docs/: README.md  user-manual.md
docs/architecture/: pipeline-overview.md  repository-layout.md
docs/examples/: expected-results.md
docs/schemas/: state-tables.md
docs/state-layout/: README.md
examples/: README.md
examples/gvillarroel-all-repos/: README.md
examples/gvillarroel-all-repos/input/: ai-docs-10-teams.yaml  ai-docs-focus.yaml  ai-docs-owner-focus.yaml  gvillarroel-repos-10-teams.csv  gvillarroel-repos-owned.csv  gvillarroel-repos.csv
examples/gvillarroel-all-repos/reports/: 10-team-run-summary.json  failures.csv  fetched.csv  run-summary.json
examples/gvillarroel-all-repos/reports/parquet-zstd/: artifacts.parquet  contributor_snapshots.parquet  contributors.parquet  current_file_snapshots.parquet  current_repo_snapshots.parquet  failed_repositories.parquet  fetch_state.parquet  file_snapshots.parquet  latest_file_snapshots.parquet  latest_repo_snapshots.parquet  repo_snapshots.parquet  repo_stage_checkpoints.parquet  repositories.parquet  repository_targets.parquet  runs.parquet  weekly_evolution.parquet
fixtures/configs/: pulse.sample.yaml
fixtures/csv/: repos.sample.csv
spikes/analyze/: README.md  libraries.md
spikes/fetch/: ADR-preliminary.md  README.md  benchmark-plan.md  prototype.rs
spikes/ras/: Cargo.toml  README.md  alternatives.md  reporting-spike.md
spikes/ras/analyze-spike/: Cargo.toml
spikes/ras/analyze-spike/src/: main.rs
spikes/ras/fetch-spike/: Cargo.toml
spikes/ras/fetch-spike/src/: main.rs
spikes/ras/stats-spike/: Cargo.toml
spikes/ras/stats-spike/src/: main.rs
spikes/stats/: spike-rust-metrics-storage.md
