[package]
name = "pulse-cli"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
serde_json.workspace = true
pulse-core = { path = "../pulse-core" }
pulse-config = { path = "../pulse-config" }
pulse-input = { path = "../pulse-input" }
pulse-store = { path = "../pulse-store" }
pulse-fetch = { path = "../pulse-fetch" }
pulse-analyze = { path = "../pulse-analyze" }
pulse-export = { path = "../pulse-export" }

[dev-dependencies]
tempfile = "3.23.0"
