[workspace]
members = [
    "fetch-spike",
    "analyze-spike",
    "stats-spike",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.102"
bstr = "1.12.1"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
content_inspector = "0.2.4"
csv = "1.4.0"
gengo = "0.8.1"
gix = "0.81.0"
ignore = "0.4.25"
infer = "0.19.0"
jwalk = "0.8.1"
memchr = "2.7.6"
rayon = "1.11.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
time = { version = "0.3.44", features = ["formatting", "macros", "parsing", "serde"] }
tokei = "14.0.0"
